# NeuralEvolution

./: .gitignore  README.md
neuralevolution-1.0/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
neuralevolution-1.0/include/: libparallel.h
neuralevolution-1.0/lib/: Makefile.am  Makefile.in  libparallel.c
neuralevolution-1.0/m4/: ax_prog_cc_mpi.m4
neuralevolution-1.0/src/: Makefile.am  Makefile.in  NeuralEvolution.c  RN_BP.c
