#	Universidad de Carabobo
#	Facultad Experimental de Ciencias y Tecnologia
#	
#	Trabajo Especial de Grado:
#		"Algoritmo Genético Paralelo para la Entonación de Parámetros de una 
#		Red Neuronal Artificial de Retropropagación del Error."
#
#	Autor: 			Orlando Castillo
#
#	Tutor
#	Academico:		Joel Rivas
#
#	Descripcion:	Archivo con el formato Makefile encargado de la definicion de los datos en la carpeta raiz

ACLOCAL_AMFLAGS = -I m4

#Subdirectorios a construir
SUBDIRS = lib src

#Includes
pkginclude_HEADERS = ./include/libparallel.h

#Readme
dist_doc_DATA = README
