#	Universidad de Carabobo
#	Facultad Experimental de Ciencias y Tecnologia
#	
#	Trabajo Especial de Grado:
#		"Algoritmo Genético Paralelo para la Entonación de Parámetros de una 
#		Red Neuronal Artificial de Retropropagación del Error."
#
#	Autor: 			Orlando Castillo
#
#	Tutor
#	Academico:		Joel Rivas
#
#	Descripcion:	Archivo con el formato Makefile encargado de la construccion del programa NeuralEvolution	

#Librerias estaticas
noinst_LIBRARIES = libparallel.a
libparallel_a_SOURCES = libparallel.c
