#	Universidad de Carabobo
#	Facultad Experimental de Ciencias y Tecnologia
#	
#	Trabajo Especial de Grado:
#		"Algoritmo Genético Paralelo para la Entonación de Parámetros de una 
#		Red Neuronal Artificial de Retropropagación del Error."
#
#	Autor: 			Orlando Castillo
#
#	Tutor
#	Academico:		Joel Rivas
#
#	Descripcion:	Archivo con el formato Makefile encargado de la construccion del programa NeuralEvolution	

#Liberias
LDADD = ../lib/libparallel.a $(INTLLIBS)

#Binarios
bin_PROGRAMS = NeuralEvolution RN_BP

#Fuentes
NeuralEvolution_SOURCES = NeuralEvolution.c
RN_BP_SOURCES = RN_BP.c
